--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>myFlix</title>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+     />
   </head>
   <body>
     <div class="app-container"></div>
