update overall styling and fix grid bugs

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="bg-dark bg-gradiant">
   <head>
     <title>myFlix</title>
     <link
@@ -10,7 +10,7 @@
     />
   </head>
   <body>
-    <div class="app-container"></div>
+    <div class="app-container bg-dark bg-gradiant text-light"></div>
     <script src="index.jsx"></script>
   </body>
 </html>
