--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html class="bg-dark bg-gradiant">
   <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>myFlix</title>
     <link
       rel="stylesheet"
